--- a/p3.html
+++ b/p3.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://kirito-roy.github.io/kpro/p3.css">
-     <!-- <link rel="stylesheet" href="/p3.css"> -->
+    <title>Suraj Hua Maddham</title>
+    <!-- <link rel="stylesheet" href="https://kirito-roy.github.io/kpro/p3.css"> -->
+     <link rel="stylesheet" href="/p3.css">
 </head>
 <body>
     <!-- this will be my new project -->
     <h1 id = "id001">Song lyric</h1>
     <hr>
     <div id="div1">
-        <h4>Home</h4>
-        <h4>About</h4>
-        <h4>Contact</h4>
+        
+        <a href="" target="_blank"><h4>Home</h4></a>
+        <a href="" target="_blank"><h4>About</h4></a>
+        <a href="" target="_blank"><h4>Contact</h4></a>
 
     </div>
     <hr>
