--- a/p3.html
+++ b/p3.html
@@ -12,7 +12,15 @@
 <body>
     <!-- this will be my new project 
      this is the main album-->
-    
+    <!-- create a flexbox that can store divs -->
+    <div id="div1">
+
+    </div>
+    <div id="div2">
+        <div id="div3">
+            <div class="div_class1"></div>        
+        </div>
+    </div>
 
 
     <script src="/p3.js"></script>
