--- a/heart_1.html
+++ b/heart_1.html
@@ -15,7 +15,7 @@
     width: 400px;
     position: fixed;
     top: 20%;
-    left: 30%;
+    left: 50px;
     animation: go 2s infinite linear ;
 }
 
